Removing API keys

--- a/Part 2 - VacationPy/code/VacationPy.ipynb
+++ b/Part 2 - VacationPy/code/VacationPy.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "#Configure gmaps\n",
-    "gmaps.configure(api_key=\"AIzaSyC-D-R4df1mFI5mLuPUglOm8qXodoKyPV8\")"
+    "gmaps.configure(api_key=\"INSERT YOUR API KEY HERE\")"
    ]
   },
   {
@@ -489,7 +489,7 @@
     "#Set up gmaps place finder\n",
     "target_type = \"hotel\"\n",
     "target_radius = 5000\n",
-    "gkey = \"AIzaSyC-D-R4df1mFI5mLuPUglOm8qXodoKyPV8\"\n",
+    "gkey = \"INSERT YOUR API KEY HERE\"\n",
     "target_search = \"hotel\"\n",
     "\n",
     "Lat = hotel_df[\"Lat\"]\n",
